Revised to work better

--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -60,11 +60,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to parse the year 1921...\n",
+      "1921: processed 493 games.\n",
+      "File written: raw/events_raw_1921.json !\n",
+      "Starting to parse the year 1922...\n",
+      "1922: processed 922 games.\n",
+      "File written: raw/events_raw_1922.json !\n",
+      "Starting to parse the year 1925...\n",
+      "1925: processed 999 games.\n",
+      "File written: raw/events_raw_1925.json !\n",
+      "Starting to parse the year 1927...\n",
+      "1927: processed 1,038 games.\n",
+      "File written: raw/events_raw_1927.json !\n",
+      "Starting to parse the year 1928...\n",
+      "1928: processed 996 games.\n",
+      "File written: raw/events_raw_1928.json !\n",
+      "Starting to parse the year 1930...\n",
+      "1930: processed 1,009 games.\n",
+      "File written: raw/events_raw_1930.json !\n",
+      "Starting to parse the year 1931...\n",
+      "1931: processed 1,012 games.\n",
+      "File written: raw/events_raw_1931.json !\n",
+      "Starting to parse the year 1932...\n",
+      "1932: processed 952 games.\n",
+      "File written: raw/events_raw_1932.json !\n",
+      "Starting to parse the year 1933...\n",
+      "1933: processed 999 games.\n",
+      "File written: raw/events_raw_1933.json !\n",
+      "Starting to parse the year 1934...\n",
+      "1934: processed 888 games.\n",
+      "File written: raw/events_raw_1934.json !\n",
+      "Starting to parse the year 1935...\n",
+      "1935: processed 872 games.\n",
+      "File written: raw/events_raw_1935.json !\n",
+      "Starting to parse the year 1936...\n",
+      "1936: processed 936 games.\n",
+      "File written: raw/events_raw_1936.json !\n",
+      "Starting to parse the year 1937...\n",
+      "1937: processed 1,016 games.\n",
+      "File written: raw/events_raw_1937.json !\n",
+      "Starting to parse the year 1938...\n",
+      "1938: processed 827 games.\n",
+      "File written: raw/events_raw_1938.json !\n",
+      "Starting to parse the year 1939...\n",
+      "1939: processed 812 games.\n",
+      "File written: raw/events_raw_1939.json !\n",
+      "Starting to parse the year 1940...\n",
+      "1940: processed 792 games.\n",
+      "File written: raw/events_raw_1940.json !\n",
+      "Starting to parse the year 1941...\n",
+      "1941: processed 714 games.\n",
+      "File written: raw/events_raw_1941.json !\n",
+      "Starting to parse the year 1942...\n",
+      "1942: processed 1,087 games.\n",
+      "File written: raw/events_raw_1942.json !\n",
+      "Starting to parse the year 1943...\n",
+      "1943: processed 980 games.\n",
+      "File written: raw/events_raw_1943.json !\n",
+      "Starting to parse the year 1944...\n",
+      "1944: processed 853 games.\n",
+      "File written: raw/events_raw_1944.json !\n",
+      "Starting to parse the year 1945...\n",
+      "1945: processed 951 games.\n",
+      "File written: raw/events_raw_1945.json !\n",
+      "Starting to parse the year 1946...\n",
+      "1946: processed 1,032 games.\n",
+      "File written: raw/events_raw_1946.json !\n",
+      "Starting to parse the year 1947...\n",
+      "1947: processed 1,098 games.\n",
+      "File written: raw/events_raw_1947.json !\n",
+      "Starting to parse the year 1948...\n",
+      "1948: processed 1,068 games.\n",
+      "File written: raw/events_raw_1948.json !\n",
+      "Starting to parse the year 1949...\n",
+      "1949: processed 1,080 games.\n",
+      "File written: raw/events_raw_1949.json !\n",
+      "Starting to parse the year 1950...\n",
+      "1950: processed 1,094 games.\n",
+      "File written: raw/events_raw_1950.json !\n",
+      "Starting to parse the year 1951...\n",
+      "1951: processed 1,130 games.\n",
+      "File written: raw/events_raw_1951.json !\n",
+      "Starting to parse the year 1952...\n",
+      "1952: processed 1,136 games.\n",
+      "File written: raw/events_raw_1952.json !\n",
+      "Starting to parse the year 1953...\n",
+      "1953: processed 1,174 games.\n",
+      "File written: raw/events_raw_1953.json !\n",
+      "Starting to parse the year 1954...\n",
+      "1954: processed 1,179 games.\n",
+      "File written: raw/events_raw_1954.json !\n",
+      "Starting to parse the year 1955...\n",
+      "1955: processed 1,186 games.\n",
+      "File written: raw/events_raw_1955.json !\n",
+      "Starting to parse the year 1956...\n",
+      "1956: processed 1,194 games.\n",
+      "File written: raw/events_raw_1956.json !\n",
+      "Starting to parse the year 1957...\n",
+      "1957: processed 1,211 games.\n",
+      "File written: raw/events_raw_1957.json !\n",
+      "Starting to parse the year 1958...\n",
+      "1958: processed 1,229 games.\n",
+      "File written: raw/events_raw_1958.json !\n",
+      "Starting to parse the year 1959...\n",
+      "1959: processed 1,234 games.\n",
+      "File written: raw/events_raw_1959.json !\n",
+      "Starting to parse the year 1960...\n",
+      "1960: processed 1,236 games.\n",
+      "File written: raw/events_raw_1960.json !\n",
+      "Starting to parse the year 1961...\n",
+      "1961: processed 1,430 games.\n",
+      "File written: raw/events_raw_1961.json !\n",
+      "Starting to parse the year 1962...\n",
+      "1962: processed 1,617 games.\n",
+      "File written: raw/events_raw_1962.json !\n",
+      "Starting to parse the year 1963...\n",
+      "1963: processed 1,616 games.\n",
+      "File written: raw/events_raw_1963.json !\n",
+      "Starting to parse the year 1964...\n",
+      "1964: processed 1,624 games.\n",
+      "File written: raw/events_raw_1964.json !\n",
+      "Starting to parse the year 1965...\n",
+      "1965: processed 1,613 games.\n",
+      "File written: raw/events_raw_1965.json !\n",
+      "Starting to parse the year 1966...\n",
+      "1966: processed 1,607 games.\n",
+      "File written: raw/events_raw_1966.json !\n",
+      "Starting to parse the year 1967...\n",
+      "1967: processed 1,613 games.\n",
+      "File written: raw/events_raw_1967.json !\n",
+      "Starting to parse the year 1968...\n",
+      "1968: processed 1,606 games.\n",
+      "File written: raw/events_raw_1968.json !\n",
+      "Starting to parse the year 1969...\n",
+      "1969: processed 1,946 games.\n",
+      "File written: raw/events_raw_1969.json !\n",
+      "Starting to parse the year 1970...\n",
+      "1970: processed 1,944 games.\n",
+      "File written: raw/events_raw_1970.json !\n",
+      "Starting to parse the year 1971...\n",
+      "1971: processed 1,929 games.\n",
+      "File written: raw/events_raw_1971.json !\n",
+      "Starting to parse the year 1972...\n",
+      "1972: processed 1,857 games.\n",
+      "File written: raw/events_raw_1972.json !\n",
+      "Starting to parse the year 1973...\n",
+      "1973: processed 1,941 games.\n",
+      "File written: raw/events_raw_1973.json !\n",
+      "Starting to parse the year 1974...\n",
+      "1974: processed 1,945 games.\n",
+      "File written: raw/events_raw_1974.json !\n",
+      "Starting to parse the year 1975...\n",
+      "1975: processed 1,934 games.\n",
+      "File written: raw/events_raw_1975.json !\n",
+      "Starting to parse the year 1976...\n",
+      "1976: processed 1,939 games.\n",
+      "File written: raw/events_raw_1976.json !\n",
+      "Starting to parse the year 1977...\n",
+      "1977: processed 2,103 games.\n",
+      "File written: raw/events_raw_1977.json !\n",
+      "Starting to parse the year 1978...\n",
+      "1978: processed 2,102 games.\n",
+      "File written: raw/events_raw_1978.json !\n",
+      "Starting to parse the year 1979...\n",
+      "1979: processed 2,098 games.\n",
+      "File written: raw/events_raw_1979.json !\n",
+      "Starting to parse the year 1980...\n",
+      "1980: processed 2,105 games.\n",
+      "File written: raw/events_raw_1980.json !\n",
+      "Starting to parse the year 1981...\n",
+      "1981: processed 1,394 games.\n",
+      "File written: raw/events_raw_1981.json !\n",
+      "Starting to parse the year 1982...\n",
+      "1982: processed 2,107 games.\n",
+      "File written: raw/events_raw_1982.json !\n",
+      "Starting to parse the year 1983...\n",
+      "1983: processed 2,109 games.\n",
+      "File written: raw/events_raw_1983.json !\n",
+      "Starting to parse the year 1984...\n",
+      "1984: processed 2,105 games.\n",
+      "File written: raw/events_raw_1984.json !\n",
+      "Starting to parse the year 1985...\n",
+      "1985: processed 2,103 games.\n",
+      "File written: raw/events_raw_1985.json !\n",
+      "Starting to parse the year 1986...\n",
+      "1986: processed 2,103 games.\n",
+      "File written: raw/events_raw_1986.json !\n",
+      "Starting to parse the year 1987...\n",
+      "1987: processed 2,105 games.\n",
+      "File written: raw/events_raw_1987.json !\n",
+      "Starting to parse the year 1988...\n",
+      "1988: processed 2,100 games.\n",
+      "File written: raw/events_raw_1988.json !\n",
+      "Starting to parse the year 1989...\n",
+      "1989: processed 2,106 games.\n",
+      "File written: raw/events_raw_1989.json !\n",
+      "Starting to parse the year 1990...\n",
+      "1990: processed 2,105 games.\n",
+      "File written: raw/events_raw_1990.json !\n",
+      "Starting to parse the year 1991...\n",
+      "1991: processed 2,104 games.\n",
+      "File written: raw/events_raw_1991.json !\n",
+      "Starting to parse the year 1992...\n",
+      "1992: processed 2,106 games.\n",
+      "File written: raw/events_raw_1992.json !\n",
+      "Starting to parse the year 1993...\n",
+      "1993: processed 2,269 games.\n",
+      "File written: raw/events_raw_1993.json !\n",
+      "Starting to parse the year 1994...\n",
+      "1994: processed 1,600 games.\n",
+      "File written: raw/events_raw_1994.json !\n",
+      "Starting to parse the year 1995...\n",
+      "1995: processed 2,017 games.\n",
+      "File written: raw/events_raw_1995.json !\n",
+      "Starting to parse the year 1996...\n",
+      "1996: processed 2,267 games.\n",
+      "File written: raw/events_raw_1996.json !\n",
+      "Starting to parse the year 1997...\n",
+      "1997: processed 2,266 games.\n",
+      "File written: raw/events_raw_1997.json !\n",
+      "Starting to parse the year 1998...\n",
+      "1998: processed 2,432 games.\n",
+      "File written: raw/events_raw_1998.json !\n",
+      "Starting to parse the year 1999...\n",
+      "1999: processed 2,428 games.\n",
+      "File written: raw/events_raw_1999.json !\n",
+      "Starting to parse the year 2000...\n",
+      "2000: processed 2,429 games.\n",
+      "File written: raw/events_raw_2000.json !\n",
+      "Starting to parse the year 2001...\n",
+      "2001: processed 2,429 games.\n",
+      "File written: raw/events_raw_2001.json !\n",
+      "Starting to parse the year 2002...\n",
+      "2002: processed 2,426 games.\n",
+      "File written: raw/events_raw_2002.json !\n",
+      "Starting to parse the year 2003...\n",
+      "2003: processed 2,430 games.\n",
+      "File written: raw/events_raw_2003.json !\n",
+      "Starting to parse the year 2004...\n",
+      "2004: processed 2,428 games.\n",
+      "File written: raw/events_raw_2004.json !\n",
+      "Starting to parse the year 2005...\n",
+      "2005: processed 2,431 games.\n",
+      "File written: raw/events_raw_2005.json !\n",
+      "Starting to parse the year 2006...\n",
+      "2006: processed 2,429 games.\n",
+      "File written: raw/events_raw_2006.json !\n",
+      "Starting to parse the year 2007...\n",
+      "2007: processed 2,431 games.\n",
+      "File written: raw/events_raw_2007.json !\n",
+      "Starting to parse the year 2008...\n",
+      "2008: processed 2,428 games.\n",
+      "File written: raw/events_raw_2008.json !\n",
+      "Starting to parse the year 2009...\n",
+      "2009: processed 2,430 games.\n",
+      "File written: raw/events_raw_2009.json !\n",
+      "Starting to parse the year 2010...\n",
+      "2010: processed 2,349 games.\n",
+      "File written: raw/events_raw_2010.json !\n",
+      "Starting to parse the year 2011...\n",
+      "2011: processed 2,429 games.\n",
+      "File written: raw/events_raw_2011.json !\n",
+      "Starting to parse the year 2012...\n",
+      "2012: processed 2,430 games.\n",
+      "File written: raw/events_raw_2012.json !\n",
+      "Starting to parse the year 2013...\n",
+      "2013: processed 2,431 games.\n",
+      "File written: raw/events_raw_2013.json !\n",
+      "Starting to parse the year 2014...\n",
+      "2014: processed 2,430 games.\n",
+      "File written: raw/events_raw_2014.json !\n",
+      "Starting to parse the year 2015...\n",
+      "2015: processed 2,429 games.\n",
+      "File written: raw/events_raw_2015.json !\n",
+      "Starting to parse the year 2016...\n",
+      "2016: processed 2,428 games.\n",
+      "File written: raw/events_raw_2016.json !\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "allfiles = []\n",
     "allgames = []\n",
@@ -117,8 +401,6 @@
     "                start_dict = {}\n",
     "                vis_start_list = []\n",
     "                home_start_list = []\n",
-    "                vis_sub_list = []\n",
-    "                home_sub_list = []\n",
     "                events = []\n",
     "#                events = np.empty((0,12),dtype=object)\n",
     "                data_list = []\n",
@@ -134,8 +416,8 @@
     "                info_dict[linearray[1]] = linearray[2]\n",
     "            elif (linearray[0] == 'start'):\n",
     "                thisbatter = {}\n",
-    "                thisbatter['batter_id'] = linearray[1]\n",
-    "                thisbatter['batter_name'] = linearray[2]\n",
+    "                thisbatter['player_id'] = linearray[1]\n",
+    "#                thisbatter['batter_name'] = linearray[2]\n",
     "                thisbatter['order'] = linearray[4]\n",
     "                thisbatter['position'] = linearray[5]\n",
     "\n",
@@ -164,7 +446,7 @@
     "                elif (thisevent['event_type'] == 'sub'):\n",
     "                    thisevent['sub_id'] = linearray[1]\n",
     "                    thisevent['sub_team'] = linearray[3]\n",
-    "                    thisevent['sub_name'] = linearray[2]\n",
+    "#                    thisevent['sub_name'] = linearray[2]\n",
     "                    thisevent['sub_batting_order'] = linearray[4]\n",
     "                    thisevent['sub_position'] = linearray[5]\n",
     "\n",
@@ -217,8 +499,8 @@
     "                else:\n",
     "                    print('event type is weird!')\n",
     "                events.append(thisevent)\n",
-    "                eventnum = eventnum + 1                    \n",
-    "                \n",
+    "                eventnum = eventnum + 1         \n",
+    "#    print(thisevent)\n",
     "    # add data for the final game, which we missed above\n",
     "    thisgamedict['info'] = info_dict\n",
     "    thisgamedict['visiting_starters'] = vis_start_list\n",
@@ -232,8 +514,9 @@
     "\n",
     "    outfilename = 'raw/events_raw_{:.0f}.json'.format(thisyear)\n",
     "    with open(outfilename, 'w') as f:\n",
-    "        json.dump(allgames, f)\n",
+    "        json.dump(allgames, f, indent=2)\n",
     "    print('File written:',outfilename,'!')\n",
+    "\n",
     "print('Done!')"
    ]
   },
