--- a/4. Load derived games.ipynb
+++ b/4. Load derived games.ipynb
@@ -248,8 +248,6 @@
     "                start_dict = {}\n",
     "                vis_start_list = []\n",
     "                home_start_list = []\n",
-    "                vis_sub_list = []\n",
-    "                home_sub_list = []\n",
     "                events = []\n",
     "#                events = np.empty((0,12),dtype=object)\n",
     "                data_list = []\n",
@@ -265,8 +263,8 @@
     "                info_dict[linearray[1]] = linearray[2]\n",
     "            elif (linearray[0] == 'start'):\n",
     "                thisbatter = {}\n",
-    "                thisbatter['batter_id'] = linearray[1]\n",
-    "                thisbatter['batter_name'] = linearray[2]\n",
+    "                thisbatter['player_id'] = linearray[1]\n",
+    "#                thisbatter['batter_name'] = linearray[2]\n",
     "                thisbatter['order'] = linearray[4]\n",
     "                thisbatter['position'] = linearray[5]\n",
     "\n",
