--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -179,39 +179,6 @@
       "File written: raw/events_raw_1960.json !\n",
       "Starting to parse the year 1961...\n",
       "1961: processed 1,430 games.\n",
-      "File written: raw/events_raw_1961.json !\n",
-      "Starting to parse the year 1962...\n",
-      "1962: processed 1,617 games.\n",
-      "File written: raw/events_raw_1962.json !\n",
-      "Starting to parse the year 1963...\n",
-      "1963: processed 1,616 games.\n",
-      "File written: raw/events_raw_1963.json !\n",
-      "Starting to parse the year 1964...\n",
-      "1964: processed 1,624 games.\n",
-      "File written: raw/events_raw_1964.json !\n",
-      "Starting to parse the year 1965...\n",
-      "1965: processed 1,613 games.\n",
-      "File written: raw/events_raw_1965.json !\n",
-      "Starting to parse the year 1966...\n",
-      "1966: processed 1,607 games.\n",
-      "File written: raw/events_raw_1966.json !\n",
-      "Starting to parse the year 1967...\n",
-      "1967: processed 1,613 games.\n",
-      "File written: raw/events_raw_1967.json !\n",
-      "Starting to parse the year 1968...\n",
-      "1968: processed 1,606 games.\n",
-      "File written: raw/events_raw_1968.json !\n",
-      "Starting to parse the year 1969...\n",
-      "1969: processed 1,946 games.\n",
-      "File written: raw/events_raw_1969.json !\n",
-      "Starting to parse the year 1970...\n",
-      "1970: processed 1,944 games.\n",
-      "File written: raw/events_raw_1970.json !\n",
-      "Starting to parse the year 1971...\n",
-      "1971: processed 1,929 games.\n",
-      "File written: raw/events_raw_1971.json !\n",
-      "Starting to parse the year 1972...\n",
-      "1972: processed 1,857 games.\n",
       "File written: raw/events_raw_1972.json !\n",
       "Starting to parse the year 1973...\n",
       "1973: processed 1,941 games.\n",
@@ -284,38 +251,6 @@
       "File written: raw/events_raw_1995.json !\n",
       "Starting to parse the year 1996...\n",
       "1996: processed 2,267 games.\n",
-      "File written: raw/events_raw_1996.json !\n",
-      "Starting to parse the year 1997...\n",
-      "1997: processed 2,266 games.\n",
-      "File written: raw/events_raw_1997.json !\n",
-      "Starting to parse the year 1998...\n",
-      "1998: processed 2,432 games.\n",
-      "File written: raw/events_raw_1998.json !\n",
-      "Starting to parse the year 1999...\n",
-      "1999: processed 2,428 games.\n",
-      "File written: raw/events_raw_1999.json !\n",
-      "Starting to parse the year 2000...\n",
-      "2000: processed 2,429 games.\n",
-      "File written: raw/events_raw_2000.json !\n",
-      "Starting to parse the year 2001...\n",
-      "2001: processed 2,429 games.\n",
-      "File written: raw/events_raw_2001.json !\n",
-      "Starting to parse the year 2002...\n",
-      "2002: processed 2,426 games.\n",
-      "File written: raw/events_raw_2002.json !\n",
-      "Starting to parse the year 2003...\n",
-      "2003: processed 2,430 games.\n",
-      "File written: raw/events_raw_2003.json !\n",
-      "Starting to parse the year 2004...\n",
-      "2004: processed 2,428 games.\n",
-      "File written: raw/events_raw_2004.json !\n",
-      "Starting to parse the year 2005...\n",
-      "2005: processed 2,431 games.\n",
-      "File written: raw/events_raw_2005.json !\n",
-      "Starting to parse the year 2006...\n",
-      "2006: processed 2,429 games.\n",
-      "File written: raw/events_raw_2006.json !\n",
-      "Starting to parse the year 2007...\n",
       "2007: processed 2,431 games.\n",
       "File written: raw/events_raw_2007.json !\n",
       "Starting to parse the year 2008...\n",
@@ -481,13 +416,15 @@
     " \n",
     "                elif (thisevent['event_type'] == 'badj'):\n",
     "                    ladj_games.append(thisgamedict['id'])\n",
-    "                    thisevent['adjusting_batter_id'] = linearray[0]\n",
-    "                    thisevent['adjusting_batter_hand'] = linearray[1]\n",
+    "                    thisevent['adjusting_batter_id'] = linearray[1]\n",
+    "                    thisevent['adjusting_batter_hand'] = linearray[2]\n",
+    "#                    pprint(thisevent)\n",
     "\n",
     "                elif (linearray[0] == 'padj'):\n",
     "                    padj_games.append(thisgamedict['id'])\n",
-    "                    thisevent['adjusting_pitcher_id'] = linearray[0]\n",
-    "                    thisevent['adjusting_pitcher_hand'] = linearray[1]\n",
+    "                    thisevent['adjusting_pitcher_id'] = linearray[1]\n",
+    "                    thisevent['adjusting_pitcher_hand'] = linearray[2]\n",
+    "#                    pprint(thisevent)\n",
     "\n",
     "                elif (linearray[0] == 'ladj'):\n",
     "                    ladj_games.append(thisgamedict['id'])\n",
@@ -527,7 +464,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ldf = pandas.DataFrame(ladj_games)\n",
+    "bdf = pandas.DataFrame(badj_games)\n",
+    "pdf = pandas.DataFrame(pad"
+   ]
   },
   {
    "cell_type": "code",
